Fix flexbox bug on Safari

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -148,6 +148,7 @@ form a {
 .footer {
   background-color: #2f2fb7;
   padding: 0.5em 2em 0.5em 2em;
+  flex-shrink: 0;
 }
 
 .footer > * {
